--- a/index.html
+++ b/index.html
@@ -82,6 +82,21 @@
             </div>
           </div>
         </div>
+
+        <div class="table">
+          <table>
+            <thead>
+              <tr>
+                <th>Título</th>
+                <th>Estréia</th>
+                <th>Diretor</th>
+                <th>Episódio</th>
+              </tr>
+            </thead>
+            <tbody>            
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
 
